--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -1,12 +1,15 @@
 // Primary Colors
 $light-green: #A5CB48;
+$medium-green: #1F4D1A;
 $dark-green: #2E4D24;
+$darker-green: #2A4C1E;
 $black: #000000;
 $white: #FFFFFF;
 
 // Secondary Colors 
 $very-light-green: #C6EDC7;
 $soft-green: #C8E6A1;
+$darker-mint: #4A8F66;
 $mint-green: #C9E4C5;
 $olive-green: #6D8A4E;
 $warm-beige: #F5F0E1;
