--- a/src/styles/partials/_dark-mode.scss
+++ b/src/styles/partials/_dark-mode.scss
@@ -222,6 +222,10 @@
       }
     }
 
+    &__card-copy {
+      color: $white;
+    }
+
     &__icon {
       font-size: 3rem;
       color: $white;
